# bmi2

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/esp32/basic_read/: Cargo.toml
examples/esp32/basic_read/src/: main.rs
examples/nrf52840/.cargo/: config.toml
examples/nrf52840/async_basic_read/: Cargo.toml
examples/nrf52840/async_basic_read/src/: main.rs
examples/nrf52840/basic_read/: Cargo.toml
examples/nrf52840/basic_read/src/: main.rs
src/: bmi2.rs  bmi2_async.rs  builder.rs  config.rs  interface.rs  interface_async.rs  interface_common.rs  lib.rs  registers.rs  types.rs
