[package]
name = "bmi2"
description = "embedded-hal driver for the bmi270/260 IMU"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/qrasmont/bmi2"
repository = "https://github.com/qrasmont/bmi2"
readme = "README.md"
keywords = ["bmi2", "bmi270", "bmi260", "embedded-hal", "imu"]

exclude = ["examples/nrf52840/.cargo", "examples/esp32/.cargo"]

[dependencies]
embedded-hal = "1.0.0"
fixedvec = "0.2.4"
