[package]
name = "bmi2"
description = "embedded-hal driver for the bmi270/260 IMU"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/qrasmont/bmi2"
repository = "https://github.com/qrasmont/bmi2"
readme = "README.md"
keywords = ["bmi2", "bmi270", "bmi260", "embedded-hal", "imu"]

exclude = ["examples/nrf52840/.cargo"]

[dependencies]
maybe-async = "0.2.10"
embedded-hal = { version = "1.0.0" , optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
fixedvec = "0.2.4"

[features]
default = []
blocking = ["dep:embedded-hal", "maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]
