[package]
name = "async_example"
edition = "2021"
publish = false

[dependencies]
embassy-nrf = { version = "0.9.0", features =  ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "net-driver"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
static_cell = { version = "2" }

bmi2 = { path = "../../../" , features = ["async"] }

[profile.release]
debug = 2
